# sonara

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agent-skills/sonara-integration/: SKILL.md
agent-skills/sonara-integration/agents/: openai.yaml
canora/: Cargo.toml
canora-python/src/feature/: spectral.rs
canora/src/: analyze.rs  beat.rs  decompose.rs  effects.rs  lib.rs  onset.rs  segment.rs  sequence.rs
canora/src/core/: audio.rs  constantq.rs  convert.rs  harmonic.rs  pitch.rs  spectrum.rs
canora/src/feature/: inverse.rs  rhythm.rs  spectral.rs
canora/src/util/: matching.rs
python/canora/: display.py
python/sonara/: __init__.py  __init__.pyi  _result.py  cli.py  genre.py  validation.py  validation.pyi  vocal_model.py
python/sonara/contracts/: feature-catalog.v1.json
python/sonara/contracts/validation/v1/: validation-capsule.schema.json
python/sonara/models/: vocalness_v1.json
python/sonara/skills/sonara-integration/: SKILL.md
scripts/: aggression_validation_adapter.py  build_aggression_candidate.py  check_python_contract.py  check_release_artifacts.py  evaluate_aggression_locked.py  freeze_aggression_locked_protocol.py  generate_sonara_integration_skill.py  mood_aggression_probe.py  probe_aggression_runtime.py  run_fidelity_gate.py  run_python_tests.py  smoke_artifacts.py  sync_workflow_skills.py  verify_aggression_custody.py
sonara/: Cargo.toml
sonara-python/: Cargo.toml
sonara-python/src/: aggression.rs  analyze.rs  beat.rs  effects.rs  error.rs  lib.rs  onset.rs  tonal.rs  validation.rs
sonara-python/src/core/: audio.rs  convert.rs  spectrum.rs
sonara-python/src/feature/: rhythm.rs  spectral.rs
sonara/benches/: bench_aggression.rs  bench_analyze.rs  bench_cqt.rs  bench_sequence.rs  bench_stft.rs
sonara/contracts/validation/v1/: command-spec.schema.json  custody-proof.schema.json  evaluation-receipt.schema.json  validation-bindings.schema.json  validation-capsule.schema.json
sonara/examples/: accuracy_eval.rs  test_playlist_100.rs
sonara/models/: vocalness_v2.json
sonara/src/: aggression.rs  aggression_linear.ferricml  analyze.rs  beat.rs  beatgrid.rs  decompose.rs  effects.rs  error.rs  filters.rs  fingerprint.rs  genre.rs  lib.rs  loudness_ext.rs  mood.rs  onset.rs  perceptual.rs  segment.rs  sequence.rs  similarity.rs  structure.rs  tonal.rs  vocal.rs  vocal_model.rs
sonara/src/core/: audio.rs  constantq.rs  convert.rs  fft.rs  harmonic.rs  intervals.rs  notation.rs  pitch.rs  spectrum.rs
sonara/src/dsp/: iir.rs  windows.rs
sonara/src/feature/: inverse.rs  rhythm.rs  spectral.rs
sonara/src/util/: matching.rs  utils.rs
sonara/src/validation/: canonical.rs  custody.rs  ledger.rs  mod.rs  runner.rs  schema.rs
sonara/tests/: accuracy.rs  bpm_accuracy.rs  validation_cli.rs  validation_contracts.rs  validation_custody.rs  validation_runner.rs
tests/: fidelity_gates.json
tests/fixtures/: tagged.flac
tests/python/: test_aggression.py  test_aggression_semantic.py  test_api.py  test_batch_errors.py  test_genre.py  test_misc_features.py  test_tonal_batch.py  test_validation.py  test_vocalness_frozen.py  test_vocalness_model.py  test_vocalness_real.py
tests/reference_data/: aggression_v2_acceptance.json  aggression_v2_evidence.json  aggression_v2_freeze.json  aggression_v2_performance.json  mood_aggression_development.json  mood_aggression_phase6_decision.json  mood_aggression_preregistration.json  vocal_labels.csv  vocalness_similarity_v2.json  vocalness_v2_validation.json
tests/scripts/: test_aggression_custody.py  test_aggression_locked_protocol.py  test_run_fidelity_gate.py  test_validation_protocol.py
tools/aggression-content-hash/: Cargo.toml
tools/aggression-content-hash/src/: main.rs
workflow/skills/: inventory.json
workflow/skills/add-todo/: SKILL.md
workflow/skills/dev-docs-cleanup/: SKILL.md
workflow/skills/notify/: SKILL.md
workflow/skills/phased-plan/: SKILL.md
workflow/skills/read-inbox/: SKILL.md
workflow/skills/release/: SKILL.md
