[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "canora"
version = "0.1.0"
description = "High-performance drop-in replacement for librosa — audio analysis and music information retrieval in Rust"
requires-python = ">=3.9"
license = {file = "LICENSE"}
readme = "README.md"
keywords = [
    "librosa",
    "audio",
    "music",
    "analysis",
    "mir",
    "music-information-retrieval",
    "stft",
    "mel-spectrogram",
    "mfcc",
    "beat-tracking",
    "pitch-detection",
    "spectral-features",
    "rust",
    "fast",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/kkollsga/canora"
Documentation = "https://github.com/kkollsga/canora#readme"
Repository = "https://github.com/kkollsga/canora"
Issues = "https://github.com/kkollsga/canora/issues"

[tool.maturin]
manifest-path = "canora-python/Cargo.toml"
python-source = "python"
module-name = "canora._canora"
features = ["pyo3/extension-module"]
