[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sonara"
version = "0.1.6"
description = "High-performance audio analysis and music information retrieval in Rust"
requires-python = ">=3.9"
license = {file = "LICENSE"}
readme = "README.md"
keywords = [
    "audio",
    "music",
    "analysis",
    "mir",
    "music-information-retrieval",
    "stft",
    "mel-spectrogram",
    "mfcc",
    "beat-tracking",
    "pitch-detection",
    "spectral-features",
    "rust",
    "fast",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/kkollsga/sonara"
Documentation = "https://github.com/kkollsga/sonara#readme"
Repository = "https://github.com/kkollsga/sonara"
Issues = "https://github.com/kkollsga/sonara/issues"

[tool.maturin]
manifest-path = "sonara-python/Cargo.toml"
python-source = "python"
module-name = "sonara._sonara"
features = ["pyo3/extension-module"]
