[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sonara"
version = "0.3.0"
description = "High-performance audio analysis and music information retrieval in Rust"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23,<3"]
license = {file = "LICENSE"}
readme = "README.md"
keywords = [
    "audio",
    "music",
    "analysis",
    "mir",
    "music-information-retrieval",
    "stft",
    "mel-spectrogram",
    "mfcc",
    "beat-tracking",
    "pitch-detection",
    "spectral-features",
    "rust",
    "fast",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/kkollsga/sonara"
Documentation = "https://github.com/kkollsga/sonara#readme"
Repository = "https://github.com/kkollsga/sonara"
Issues = "https://github.com/kkollsga/sonara/issues"

[project.scripts]
sonara = "sonara.cli:main"

[tool.maturin]
manifest-path = "sonara-python/Cargo.toml"
python-source = "python"
module-name = "sonara._sonara"
features = ["pyo3/extension-module"]
include = [
    { path = "python/sonara/models/*.json", format = ["sdist", "wheel"] },
    { path = "python/sonara/contracts/**/*.json", format = ["sdist", "wheel"] },
    { path = "python/sonara/skills/**/*.md", format = ["sdist", "wheel"] },
    { path = "python/sonara/skills/**/*.yaml", format = ["sdist", "wheel"] },
    { path = "sonara/contracts/**/*.json", format = ["sdist"] },
    { path = "agent-skills/sonara-integration/**/*.md", format = ["sdist"] },
    { path = "agent-skills/sonara-integration/**/*.yaml", format = ["sdist"] },
    { path = "scripts/generate_sonara_integration_skill.py", format = ["sdist"] },
]
