[package]
name = "sonara"
version = "0.3.0"
edition = "2021"
description = "High-performance audio analysis library for music information retrieval"
license = "MIT"
repository = "https://github.com/kkollsga/sonara"
readme = "../README.md"
keywords = ["audio", "music", "mir", "stft", "analysis"]
categories = ["multimedia::audio", "science"]

[dependencies]
ndarray = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
realfft = { workspace = true }
rustfft = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
symphonia = { workspace = true }
hound = { workspace = true }
rubato = { workspace = true }
ferricml = { version = "0.1.0", optional = true }
sha2 = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
rusqlite = { version = "0.33", features = ["bundled"], optional = true }
ssh-key = { version = "0.6", features = ["ed25519", "rand_core"], optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }
blas-src = { version = "0.14", optional = true }

[features]
default = []
accelerate = ["ndarray/blas", "blas-src/accelerate"]
aggression = ["dep:ferricml", "dep:sha2"]
validation = ["dep:serde", "dep:serde_json", "dep:sha2"]
validation-ledger = ["validation", "dep:rusqlite", "dep:ssh-key", "dep:rand_core"]

[dev-dependencies]
approx = { workspace = true }
criterion = "0.8"
tempfile = "3"

[[bench]]
name = "bench_utils"
harness = false

[[bench]]
name = "bench_stft"
harness = false

[[bench]]
name = "bench_sequence"
harness = false

[[bench]]
name = "bench_cqt"
harness = false

[[bench]]
name = "bench_analyze"
harness = false

[[bench]]
name = "bench_aggression"
harness = false
required-features = ["aggression"]
